--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -10,8 +10,12 @@ jobs:
     
     steps:
       - uses: actions/checkout@v2
-
-      - uses: reviewdog/action-setup@v1
+      
+      - name: Install linter
+        run: go get golang.org/x/lint/golint
+      
+      - name: Setup reviewdog
+        uses: reviewdog/action-setup@v1
         with:
           reviewdog_version: latest
 
