--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -7,17 +7,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v2
-      
+
       - name: Install linter
         run: go get golang.org/x/lint/golint
-      
+
       - name: Setup reviewdog
         uses: reviewdog/action-setup@v1
         with:
           reviewdog_version: latest
 
-      - name: golangci-lint
-        uses: reviewdog/action-golangci-lint@v1
+      - name: Run reviewdog
+          env:
+            REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          run: |
+            reviewdog -reporter=github-pr-review -runners=golint,govet
