--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: actions/setup-go@v2
+        with:
+          go-version: 1.15
+
       - name: Install linter
         run: go get golang.org/x/lint/golint
 
