--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -23,8 +23,9 @@ jobs:
         with:
           reviewdog_version: latest
 
-      - name: Run reviewdog
+      - name: Run reviewdog (github-pr-check)
+        continue-con-error: true
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          golint ./... | reviewdog -f=golint -name=golint-github-check -reporter=github-check -level=warning
+          golint ./... | reviewdog -f=golint -name=golint-github-check -reporter=github-pr-check -fail-on-error
