--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  reviewdog-pr:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,8 +24,20 @@ jobs:
           reviewdog_version: latest
 
       - name: Run reviewdog (github-pr-check)
-        continue-con-error: true
+        continue-on-error: true
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           golint ./... | reviewdog -f=golint -name=golint-github-check -reporter=github-pr-check -fail-on-error
+
+  staticcheck:
+    name: runner / staticcheck
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: reviewdog/action-staticcheck@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-review
+          filter_mode: nofilter
+          fail_on_error: true
